--- a/catch-of-the-day/package.json
+++ b/catch-of-the-day/package.json
@@ -2,6 +2,7 @@
   "name": "cotd",
   "version": "0.0.1",
   "private": true,
+  "homepage": "https://davemaurer.github.io/react-basic-app-gitbuild/",
   "devDependencies": {
     "autoprefixer-stylus": "0.10.0",
     "babel-eslint": "^7.1.1",
